test_case/rust-lang_rust/53584_415270707_53.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/structs/structure-constructor-type-mismatch.rs","byte_start":1278,"byte_end":1279,"line_start":52,"line_end":52,"column_start":12,"column_end":13,"is_primary":true,"text":[{"text":"        x: 7,","highlight_start":12,"highlight_end":13}],"label":"expected f32, found integral variable","suggested_replacement":null,"//~ ERROR wrong number of type arguments\n   |                        ^^^ unexpected type argument\n\n"}
[00:46:53] {"message":"mismatched types","code":{"code":"E0308","explanation":"\nThis error occurs when the compiler was unable to infer the concrete type of a\nvariable. It can occur for several cases, the most common of which is a\nmismatch in the expected type that the compiler inferred for a variable's\ninitializing expression, and the actual type explicitly assigned to the\nvariable.\n\nFor example:\n\n